Prevent top bar from being covered by WordPress Admin bar

--- a/framework/default/css/style.css
+++ b/framework/default/css/style.css
@@ -419,8 +419,6 @@ h6 {
 
 #top-bar {
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     background-color: #000;
     background: -webkit-linear-gradient(top, #222, #000);
